Added a conversation list name endpoint and integrated it with the sidebar component. Also fixed a lot of the styling of the page and renamed TimeLabel to SidebarLabel.
